--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section id="start-screen" class="screen active text-center">
             <div class="card shadow-sm">
                 <div class="card-body">
-                    <h2 class="mb-4">Pronto/a para correr?</h2>
+                    <h2 class="mb-4">Pronto (a) para correr?</h2>
                     <button id="start-run" class="btn btn-primary btn-lg">
                         <i class="bi bi-play-fill"></i> Iniciar Corrida
                     </button>
@@ -71,5 +71,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="script.js"></script>
+
+    <footer class="footer mt-auto py-3 bg-primary text-white text-center">
+        <div class="container">
+            <span>© 2025 Cellão. Todos os direitos reservados.</span>
+        </div>
+    </footer>
 </body>
 </html>
